--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
+.contentName {
+  text-align: center;
+  font-size: 8vh;
+  text-transform: uppercase;
+  letter-spacing: 0.5vw;
+  color: rgb(231, 45, 101);
+}
+
+.contentActors {
+  margin: auto;
+  padding: 1vh;
+  border: 3px solid red;
+}
+#root {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  margin-top: 10%;
+  background-color: rgb(231, 45, 101);
+}
+.blockActors {
+  width: 20%;
+  height: 25vh;
+  background-color: white;
+  margin: 2vh 1vw;
+  padding: 1.5vh 1vw; 
+  text-align: center;
+  border-radius: 15px
+}
 .actorPhoto {
   width: 100px;
   height: 100px;
@@ -10,28 +41,4 @@
   width: 20px;
   height: 20px;
   object-fit: cover;
-}
-.contentActors {
-  margin: auto;
-  padding: 1vh;
-  border: 3px solid red;
-}
-#root {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: stretch;
-  width: 100%;
-  height: 100%;
-  margin-top: 10%;
-}
-.blockActors {
-    width: 25%;
-  height: 25vh;
-  background-color: white;
-  border: 2px solid rgb(26, 168, 81);
-  margin: 1vh;
-  padding: 1vh 1vw;
-  flex-direction: column;
-  text-align: center;
 }
